@@ -64,6 +64,7 @@ Please visit http://aegisub.net to download latest version
 - Last folder for all the file selection dialogs are now remembered in config.dat. (Pomyk)
 - Audio current play position cursor will now always be visible. (AMZ)
 - Removed video frame/subtitles time sync controls from the grid context menu. (AMZ)
+- Timeline is now drawn below audio display. (AMZ)
 
 
 = 1.09 beta - 2006.01.16 ===========================
